# PALM

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: config.yaml
config/dataset/: classification_binary.yaml  regression.yaml
config/dimred/: noreduction.yaml  pca.yaml
config/embedder/: anupp.yaml  esm2_t12_35M.yaml  esm2_t30_150M.yaml  esm2_t33_650M.yaml  esm2_t36_3B.yaml  esm2_t48_15B.yaml  esm2_t6_8M.yaml  onehot.yaml  zscale.yaml
config/general/: train.yaml
config/mlflow/: local.yaml
config/persistence/: local.yaml
config/plots/: no_plots.yaml  plot.yaml
config/predictor/: lightattention.yaml  logisticregression.yaml  logisticregression_fast.yaml  lstm.yaml  torchmlp.yaml
datasets/: README.md  amyloidbeta42_753.csv  amypro22.csv  amypro22_frag25.csv  amypro22_frag50.csv  amypro22_residues.csv  amypro_segments.ipynb  asyn_frag36.csv  canya_data.ipynb  info_for_testset_table.ipynb  nnk4.csv  nnk4_full_nostop.csv  nnk4_truefull_nostop.csv  nnk4_v1.csv  serrano158.csv  serum_frag50.csv  tau_frag36.csv
datasets/training_data/: sbxw_fibrillation_peptide_waltzdb-5fold_train-val_serrano-test_maskpadded10x_padlen-10.csv  sbxw_fibrillation_peptide_waltzdb-5fold_train-val_serrano-test_randpadded10x_padlen-10_noab42.csv
notebooks/: interactive_mlbp_tsnes.ipynb
notebooks/ehec/: ablation_plots.ipynb  amypro22.ipynb  anova.ipynb  benchmarking_fixannup.ipynb  interactive_mlbp_APP.ipynb  interactive_mlbp_OG.ipynb  interactive_training.ipynb  seqalign.ipynb  seqplots.ipynb
notebooks/inference_notebooks/: 250922_inference.ipynb
notebooks/sbxw/: 241126_create_datasets.ipynb  250127_mlflow_plot.ipynb  250204_test_train_model.ipynb  250207_create_datasets_amypro27.ipynb  250213_create_datasets_aggreprot.ipynb  250213_create_datasets_aggreprot_AmyPro27.ipynb  250216_annup.ipynb  250217_create_datasets_waltzrecombined.ipynb  250217_kmer2residue.ipynb  250218_test_train_model_residuepred.ipynb  250221_test_train_model_residuepred-Copy1.ipynb  250221_test_train_model_residuepred-Copy2.ipynb  250221_test_train_model_residuepred.ipynb  (+16 more)
tests/: test_esm_embedding_device.py
(+126 files in other folders)
